[package]
name = "ggstd"
version = "0.0.3"
edition = "2021"
license = "BSD-3-Clause"
keywords = ["go", "golang", "stdlib"]
description = "Partial implementation of Go standard library"
repository = "https://github.com/gtrafimenkov/rust-ggstd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
