[package]
name = "ggstd"
version = "0.0.5"
edition = "2021"
license = "BSD-3-Clause"
keywords = ["go", "golang", "stdlib"]
description = "Partial implementation of Go standard library"
repository = "https://github.com/gtrafimenkov/rust-ggstd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[dev-dependencies]
# flate2 = "1.0" # for examples/gunzip.rs
